methylKit 0.99.4
--------------
IMPROVEMENTS AND BUG FIXES
* all annotation functions are now removed and are available through genomation
  packages. See the vignette for examples.


methylKit 0.99.3
--------------
IMPROVEMENTS AND BUG FIXES
* Fixed a bug in processBismark() C++ function where BAM files are should be treated as 0-based.
  Now  this is fixed.
* Bug in calculateDiffMethDSS is fixed (https://github.com/al2na/methylKit/issues/49)

methylKit 0.99.2
--------------
IMPROVEMENTS AND BUG FIXES

* Fixed a bug in methRead() introduced after the addition of mincov argument.
  the bug occurred only reading files legacy text files that have CpGs
  with coverage below 10
* Changes to vignette for better description of the tests.
* Compiler error that occurs in older compilers are fixed via this PR 
  https://github.com/al2na/methylKit/pull/43


methylKit 0.99.1
--------------
IMPROVEMENTS AND BUG FIXES

* mostly changes to meet BioCcheck()  requirements and reccomendations
* C++ code compiles on windows now, regex requirement is no longer there.
 

methylKit 0.9.6
--------------
IMPROVEMENTS AND BUG FIXES

* changes to following function names:
  read() to methRead()  
  read.bismark to processBismarkAln()
  adjust.methylC() to adjustMethylC() 
  get.methylDiff() to getMethylDiff()
  annotate.WithFeature() to annotateWithFeature()
  annotate.WithFeature.Flank() to annotateWithFeatureFlank()
  annotate.WithGenicParts() to annotateWithGenicParts()
  read.bed() to readBed()
  read.feature.flank() to readFeatureFlank()
  read.transcript.features() to readTranscriptFeatures()
* Improved documentation for methRead() (old read())
* Now, bismark cytosine report and coverage files can be read using methRead()
  pipeline argument. see ?methRead
* Ported the Perl script for methylation base calling to C/C++ via Rcpp. 
  Contributed by Alexander Gosdschan.
* methRead() uses data.table::fread() to read files faster.