@@ -23,9 +23,13 @@ export(getCorrelation)
 export(getCoverageStats)
 export(getDBPath)
 export(getData)
+export(getFeatsWithTargetsStats)
+export(getFlanks)
+export(getMembers)
 export(getMethylDiff)
 export(getMethylationStats)
 export(getSampleID)
+export(getTargetAnnotationStats)
 export(getTreatment)
 export(makeMethylDB)
 export(methRead)
@@ -33,6 +37,7 @@ export(methSeg)
 export(methSeg2bed)
 export(normalizeCoverage)
 export(percMethylation)
+export(plotTargetAnnotation)
 export(pool)
 export(processBismarkAln)
 export(read)
