@@ -54,11 +54,14 @@ get.methylDiff<-function(...){
 #' Deprecated/Defunct functions
 #' 
 #' These are deprecated or defunct functions. Most of them 
-#' are replaced by genomation functions.
+#' are replaced by genomation functions. See the vignette for 
+#' examples on how to use genomation functions for annotation
+#' purposes.
 #' 
 #' @docType methods
-#' @aliases annotate.WithFeature
 #' @rdname genomation-deprecated
+#' @name genomation-deprecated
+#' @aliases annotate.WithFeature
 #' @export
 annotate.WithFeature<-function(){
   .Deprecated("genomation::annotateWithFeature")
@@ -66,6 +69,7 @@ annotate.WithFeature<-function(){
           "See vignette for examples.")}
 
 #' @rdname  genomation-deprecated
+#' @aliases annotate.WithFeature.Flank
 #' @export
 annotate.WithFeature.Flank<-function(){
   .Deprecated("genomation::annotateWithFeatureFlank")
@@ -75,6 +79,7 @@ annotate.WithFeature.Flank<-function(){
 
 
 #' @rdname genomation-deprecated
+#' @aliases annotate.WithGenicParts
 #' @export
 annotate.WithGenicParts<-function(){
   .Deprecated("genomation::annotateWithGeneParts")
@@ -83,6 +88,7 @@ annotate.WithGenicParts<-function(){
 
 
 #' @rdname genomation-deprecated
+#' @aliases read.bed
 #' @export
 read.bed<-function(){
   .Deprecated("genomation::readBed")
@@ -90,6 +96,7 @@ read.bed<-function(){
           "See vignette for examples.")}
 
 #' @rdname genomation-deprecated
+#' @aliases read.feature.flank
 #' @export
 read.feature.flank<-function(){
   .Deprecated("genomation::readFeatureFlank")
@@ -97,10 +104,49 @@ read.feature.flank<-function(){
           "See vignette for examples.")}
 
 #' @rdname genomation-deprecated
+#' @aliases read.transcript.features
 #' @export
 read.transcript.features<-function(){
   .Deprecated("genomation::readTranscriptFeatures")
   message("Use functions in genomation package from Bioconductor\n",
           "See vignette for examples.")}
 
+#' @rdname genomation-deprecated
+#' @aliases getFeatsWithTargetsStats
+#' @export
+getFeatsWithTargetsStats<-function(){
+  .Deprecated("genomation::getFeatsWithTargetsStats")
+  message("Use functions in genomation package from Bioconductor\n",
+          "See vignette for examples.")}
 
+#' @rdname genomation-deprecated
+#' @aliases getFlanks 
+#' @export
+getFlanks<-function(){
+  .Deprecated("genomation::getFlanks")
+  message("Use functions in genomation package from Bioconductor\n",
+          "See vignette for examples.")} 
+
+#' @rdname genomation-deprecated
+#' @aliases getMembers 
+#' @export
+getMembers<-function(){
+  .Deprecated("genomation::getMembers")
+  message("Use functions in genomation package from Bioconductor\n",
+          "See vignette for examples.")} 
+
+#' @rdname genomation-deprecated
+#' @aliases getTargetAnnotationStats 
+#' @export
+getTargetAnnotationStats<-function(){
+  .Deprecated("genomation::getTargetAnnotationStats")
+  message("Use functions in genomation package from Bioconductor\n",
+          "See vignette for examples.")} 
+
+#' @rdname genomation-deprecated
+#' @aliases plotTargetAnnotation 
+#' @export
+plotTargetAnnotation<-function(){
+  .Deprecated("genomation::plotTargetAnnotation")
+  message("Use functions in genomation package from Bioconductor\n",
+          "See vignette for examples.")} 
