@@ -1,10 +1,16 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/deprecated_defunct.R
 \docType{methods}
-\name{annotate.WithFeature}
+\name{genomation-deprecated}
 \alias{annotate.WithFeature}
 \alias{annotate.WithFeature.Flank}
 \alias{annotate.WithGenicParts}
+\alias{genomation-deprecated}
+\alias{getFeatsWithTargetsStats}
+\alias{getFlanks}
+\alias{getMembers}
+\alias{getTargetAnnotationStats}
+\alias{plotTargetAnnotation}
 \alias{read.bed}
 \alias{read.feature.flank}
 \alias{read.transcript.features}
@@ -21,9 +27,21 @@ read.bed()
 read.feature.flank()
 
 read.transcript.features()
+
+getFeatsWithTargetsStats()
+
+getFlanks()
+
+getMembers()
+
+getTargetAnnotationStats()
+
+plotTargetAnnotation()
 }
 \description{
 These are deprecated or defunct functions. Most of them 
-are replaced by genomation functions.
+are replaced by genomation functions. See the vignette for 
+examples on how to use genomation functions for annotation
+purposes.
 }
 
